--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>hello world</h1>
+    <canvas id="jsCanvas" class ="canvas"></canvas>
+    <div class="controls">
+      <div class="control_range">
+            <input 
+            type="range" 
+            id="jsRange" 
+            min="1" 
+            max="10" 
+            value="5.0" 
+            step="0.5" />
+      </div>
 
+      <div class="control_btns">
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
+      </div>
+      
+      <div class="control_colors" id="jsColors"> 
+          <div class="control_color" style="background-color: black"></div>
+          <div class="control_color" style="background-color: white"></div>
+          <div class="control_color" style="background-color: red"></div>
+          <div class="control_color" style="background-color: orange"></div>
+          <div class="control_color" style="background-color: yellow"></div>
+          <div class="control_color" style="background-color: green"></div>
+          <div class="control_color" style="background-color: blue"></div>
+          <div class="control_color" style="background-color: navy"></div>
+          <div class="control_color" style="background-color: purple"></div> 
+      </div>
+    </div>
+      
     <script src="app.js"></script>  
   </body>
 </html>
