Paintingjs JavaScript 3(change color event)

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       </div>
       
       <div class="control_colors" id="jsColors"> 
-          <div class="control_color" style="background-color: black"></div>
-          <div class="control_color" style="background-color: white"></div>
-          <div class="control_color" style="background-color: red"></div>
-          <div class="control_color" style="background-color: orange"></div>
-          <div class="control_color" style="background-color: yellow"></div>
-          <div class="control_color" style="background-color: green"></div>
-          <div class="control_color" style="background-color: blue"></div>
-          <div class="control_color" style="background-color: navy"></div>
-          <div class="control_color" style="background-color: purple"></div> 
+          <div class="control_color jsColor" style="background-color: black"></div>
+          <div class="control_color jsColor" style="background-color: white"></div>
+          <div class="control_color jsColor" style="background-color: red"></div>
+          <div class="control_color jsColor" style="background-color: orange"></div>
+          <div class="control_color jsColor" style="background-color: yellow"></div>
+          <div class="control_color jsColor" style="background-color: green"></div>
+          <div class="control_color jsColor" style="background-color: blue"></div>
+          <div class="control_color jsColor" style="background-color: navy"></div>
+          <div class="control_color jsColor" style="background-color: purple"></div> 
       </div>
     </div>
       
