Paintingjs add(reset effect)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="control_btns">
         <button id="jsMode">Fill</button>
         <button id="jsSave">Save</button>
+        <button id="jsReset">Reset</button>
       </div>
       
       <div class="control_colors" id="jsColors"> 
